--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: Cayman
 title: Michael Okanta
-description: Data Analyst | Graduate Teaching Assistant | MSc in Statistics
+description: Statistician | Data Analyst | Graduate Teaching Assistant
+theme: jekyll-theme-cayman
