--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Michael Okanta
 description: Graduate Teaching Assistant | MSc in Statistics | Miami University
-theme: jekyll-theme-chirpy
+theme: jekyll-theme-hacker
