--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: Modernist theme
-description: Modernist is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: Michael Okanta
+description: Statistician | Data Analyst | Graduate Teaching Assistant
 theme: jekyll-theme-modernist
