--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Michael Okanta
 description: Statistician | Data Analyst | Graduate Teaching Assistant
-theme: jekyll-theme-modernist
+theme: jekyll-theme-cayman
